# thermostat

./: .dockerignore  Dockerfile  LICENSE  build.sh  docker-compose.yml  run.sh
server/: Cargo.toml
server/.cargo/: config
server/schemas/: liquibase.properties
server/schemas/public/tables/: heater_timeslot.sql  temperature_history.sql  timeslots.sql  users.sql
server/sql/query/heater_timeslot/: delete.sql  insert.sql  select.sql  select_by_date.sql  update.sql
server/sql/query/setting/: select.sql  select_by_key.sql  update_by_key.sql
server/sql/query/temperature/: insert.sql  select_by_min_max.sql  select_last.sql
server/sql/schemas/: changelog.json  liquibase.properties
server/sql/schemas/public/tables/: heater_timeslot.sql  setting.sql  temperature_history.sql
server/src/: main.rs
server/src/api/: heater_timeslot.rs  mod.rs  setting.rs  status.rs  temperature.rs
server/src/db/: heater_timeslot.rs  mod.rs  setting.rs  temperature.rs
server/src/exec/: mod.rs
server/src/hal/: mod.rs
server/src/hal/relay/: mod.rs  omron.rs  simu.rs
server/src/hal/thermometer/: ada.rs  mod.rs  simu.rs
server/src/structs/: HeaterTimeSlot.rs  mod.rs
server/tests/: .python-version  main.py
webapp/: README.md  package-lock.json  package.json
webapp/src/: App.vue  main.ts
webapp/src/components/: AppHeader.vue  PrettyNumberInput.vue
webapp/src/components/timeslot/: AddTimeSlot.vue  TimeSlotDay.vue
webapp/src/router/: index.ts
webapp/src/store/: index.ts
webapp/src/views/: HomeView.vue  SettingsView.vue  TimeslotsView.vue
