[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-postgres = { version = "0.7.5", features = ["with-chrono-0_4"] }
chrono = "0.4"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0.79"
